# ff-wii

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create-build-directory.sh  install-deps.sh  main.cpp  wiimake
include/: audio.hpp  img.hpp  net.hpp  sys.hpp  ttf.hpp
py/: bin_to_header.py
src/: main.cpp
